Address record full implementation sandbox to be impelemented in db template handler C# template => integration test show there is an issue with the primary key definition in the Sql server database model importer => sql server database model importer should be corrected

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /AdventureWorks2017.DataAccess.IntegrationTests/bin/Debug/netcoreapp3.0
 /AdventureWorks2017.DataAccess.IntegrationTests/obj
 /AdventureWorks2017.DataAccess.IntegrationTests/AdventureWorks2017.DataAccess.IntegrationTests.csproj.user
+/AdventureWorks2017.DataAccess/bin/Debug/netcoreapp3.0
